# notes

./: README.md  cereal.ipynb  pyproject.toml
lab 12 notes and demo/: cereal.ipynb  codeinterview.ipynb  codeinterview.py
