[tool.poetry]
name = "cereal"
version = "0.1.0"
description = "its about cereal"
authors = ["Omardyab <omarzadyab@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.4"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
